# krkrz

./: .gitignore  .gitmodules  Android.mk  Application.mk  CMakeLists.txt  HowToBulid.txt  LICENSE  README  README.md  libkrkrz.map
android/: Android.mk  HowToBuild.txt  build.gradle
base/: BinaryStream.cpp  BinaryStream.h  CharacterSet.cpp  CharacterSet.h  EventIntf.cpp  EventIntf.h  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  StorageIntf.h  SystemIntf.cpp  TextStream.cpp  TextStream.h  UserEvent.h  UtilStreams.cpp  XP3Archive.cpp
src/core/visual/win32/krmovie/ogg/codecs/theora/libs/libtheora/: Makefile.am  SConstruct
src/core/visual/win32/krmovie/ogg/codecs/theora/libs/libtheora/include/theora/: theoradec.h
src/core/visual/win32/krmovie/ogg/codecs/theora/libs/libtheora/lib/: Makefile.am  collect.h  tokenize.c
src/core/visual/win32/krmovie/ogg/codecs/theora/libs/libtheora/win32/: build_theora_static.bat
src/plugins/win32/wuvorbis/ogg/: CHANGES  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  libogg.spec
src/plugins/win32/wuvorbis/ogg/debian/: Makefile.am  Makefile.in
src/plugins/win32/wuvorbis/ogg/doc/: Makefile.am  Makefile.in  framing.html  index.html
src/plugins/win32/wuvorbis/ogg/include/: Makefile.in
src/plugins/win32/wuvorbis/ogg/include/ogg/: Makefile.in  os_types.h
src/plugins/win32/wuvorbis/ogg/macos/.svn/: dir-wcprops  entries
src/plugins/win32/wuvorbis/ogg/macos/.svn/wcprops/: libogg.mcp.exp.svn-work  libogg.mcp.svn-work
src/plugins/win32/wuvorbis/ogg/macos/compat/.svn/: dir-wcprops  entries
src/plugins/win32/wuvorbis/ogg/macos/compat/.svn/wcprops/: strdup.c.svn-work
src/plugins/win32/wuvorbis/ogg/macos/compat/sys/.svn/: dir-wcprops  entries
src/plugins/win32/wuvorbis/ogg/macos/compat/sys/.svn/wcprops/: types.h.svn-work
src/plugins/win32/wuvorbis/ogg/macosx/.svn/: dir-wcprops  entries
src/plugins/win32/wuvorbis/ogg/macosx/English.lproj/.svn/: dir-wcprops  entries
src/plugins/win32/wuvorbis/ogg/macosx/English.lproj/.svn/wcprops/: InfoPlist.strings.svn-work
src/plugins/win32/wuvorbis/ogg/macosx/ogg.pbproj/.svn/: dir-wcprops  entries
src/plugins/win32/wuvorbis/ogg/macosx/ogg.pbproj/.svn/text-base/: project.pbxproj.svn-base
src/plugins/win32/wuvorbis/ogg/macosx/ogg.pbproj/.svn/wcprops/: project.pbxproj.svn-work
src/plugins/win32/wuvorbis/ogg/src/: Makefile.in  bitwise.c  framing.c
src/plugins/win32/wuvorbis/ogg/win32/: Makefile.in
src/plugins/win32/wuvorbis/vorbis/: Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  libvorbis.spec
src/plugins/win32/wuvorbis/vorbis/debian/: Makefile.am  Makefile.in  changelog  rules
src/plugins/win32/wuvorbis/vorbis/doc/: Makefile.am  Makefile.in  Vorbis_I_spec.html  draft-kerr-avt-vorbis-rtp-03.txt  helper.html  index.html  v-comment.html
src/plugins/win32/wuvorbis/vorbis/doc/vorbisfile/: OggVorbis_File.html
src/plugins/win32/wuvorbis/vorbis/doc/xml/: 04-codec.xml  05-comment.xml  06-floor0.xml  07-floor1.xml  08-residue.xml
src/plugins/win32/wuvorbis/vorbis/examples/: Makefile.in  chaining_example.c  decoder_example.c  encoder_example.c  seeking_example.c  vorbisfile_example.c
src/plugins/win32/wuvorbis/vorbis/include/: Makefile.in
src/plugins/win32/wuvorbis/vorbis/include/vorbis/: Makefile.am  Makefile.in  codec.h  vorbisenc.h  vorbisfile.h
src/plugins/win32/wuvorbis/vorbis/lib/: Makefile.in  analysis.c  backends.h  block.c  codebook.c  codebook.h  codec_internal.h  envelope.c  floor0.c  floor1.c  info.c  lookup.c  lookup_data.h  lookups.pl  lsp.c  mapping0.c  masking.h  mdct.c  misc.h  os.h  psy.c  psy.h  registry.c  registry.h  res0.c  scales.h  sharedbook.c  smallft.c  smallft.h  vorbisenc.c  vorbisfile.c  window.c  window.h
src/plugins/win32/wuvorbis/vorbis/lib/books/: Makefile.in
src/plugins/win32/wuvorbis/vorbis/lib/books/coupled/: Makefile.in
src/plugins/win32/wuvorbis/vorbis/lib/books/floor/: Makefile.in
src/plugins/win32/wuvorbis/vorbis/lib/books/uncoupled/: Makefile.in
src/plugins/win32/wuvorbis/vorbis/lib/modes/: Makefile.in  psych_11.h  psych_16.h  psych_44.h  psych_8.h  residue_16.h  residue_44.h  residue_44u.h  residue_8.h  setup_11.h  setup_16.h  setup_22.h  setup_32.h  setup_44.h  setup_44u.h  setup_8.h  setup_X.h
src/plugins/win32/wuvorbis/vorbis/macosx/English.lproj/: InfoPlist.strings
src/plugins/win32/wuvorbis/vorbis/vq/: Makefile.am  Makefile.in  bookutil.c  bookutil.h  distribution.c  huffbuild.c  latticebuild.c  latticehint.c  latticepare.c  latticetune.c  vqgen.c  vqgen.h  vqsplit.c
src/plugins/win32/wuvorbis/vorbis/win32/: Makefile.am  Makefile.in  vorbis.def
src/plugins/win32/wuvorbis/x64/vorbis/: COPYING  Makefile.am  Makefile.in  aclocal.m4  aoTuV_README-1st.txt  aoTuV_technical.txt  autogen.sh  config.h.in  configure  configure.in  libvorbis.spec
src/plugins/win32/wuvorbis/x64/vorbis/include/: Makefile.in
src/plugins/win32/wuvorbis/x64/vorbis/include/vorbis/: Makefile.in  codec.h
src/plugins/win32/wuvorbis/x64/vorbis/lib/: Makefile.am  Makefile.in  backends.h  barkmel.c  bitrate.c  bitrate.h  block.c  block.c.bak  codebook.c  codebook.h  codec_internal.h  cpu.c  envelope.c  envelope.h  floor0.c  floor1.c  highlevel.h  info.c  info.c.bak  lookup.c  lookup.h  lookup_data.h  lpc.c  lpc.h  lsp.c  lsp.h  mapping0.c  mapping0.c.bak  masking.h  mdct.c  mdct.h  misc.h  os.h  psy.c  psy.h  psytune.c  registry.c  registry.h  res0.c  scales.h  (+7 more)
src/plugins/win32/wuvorbis/x64/vorbis/lib/books/: Makefile.in
src/plugins/win32/wuvorbis/x64/vorbis/lib/books/coupled/: Makefile.in  res_books_stereo.h
src/plugins/win32/wuvorbis/x64/vorbis/lib/books/floor/: Makefile.in  floor_books.h
src/plugins/win32/wuvorbis/x64/vorbis/lib/books/uncoupled/: Makefile.in  res_books_uncoupled.h
src/plugins/win32/wuvorbis/x64/vorbis/lib/modes/: Makefile.in  floor_all.h  psych_11.h  psych_16.h  psych_44.h  psych_8.h  residue_16.h  residue_44.h  residue_44u.h  residue_8.h  setup_11.h  setup_16.h  setup_22.h  setup_32.h  setup_44.h  setup_44u.h  setup_8.h  setup_X.h
tjs2/: tjs.cpp  (+62 more)
(+2738 files in other folders)
